--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <group
+        android:scaleX="0.49"
+        android:scaleY="0.49"
+        android:translateX="130.56"
+        android:translateY="130.56">
+        <path
+            android:fillColor="#FF000000"
+            android:pathData="M256,0C114.85,0 0,114.85 0,256s114.85,256 256,256s256,-114.85 256,-256S397.15,0 256,0zM256,480C132.48,480 32,379.52 32,256S132.48,32 256,32s224,100.48 224,224S379.52,480 256,480z" />
+        <path
+            android:fillColor="#62b2f7"
+            android:pathData="M380.77,132.02c-0.13,-0.14 -0.18,-0.34 -0.32,-0.46c-0.14,-0.14 -0.34,-0.18 -0.46,-0.32C348.14,99.6 304.32,80 256,80s-92.14,19.6 -123.98,51.23c-0.14,0.13 -0.34,0.18 -0.46,0.32s-0.19,0.32 -0.32,0.46C99.6,163.86 80,207.68 80,256s19.6,92.14 51.23,123.98c0.13,0.14 0.18,0.34 0.32,0.46c0.14,0.13 0.34,0.18 0.46,0.32C163.86,412.4 207.68,432 256,432s92.14,-19.6 123.98,-51.23c0.14,-0.13 0.34,-0.18 0.46,-0.32c0.13,-0.14 0.18,-0.34 0.32,-0.46C412.4,348.14 432,304.32 432,256S412.4,163.86 380.77,132.02zM399.06,240h-81.33c-1.5,-5.81 -3.81,-11.26 -6.8,-16.3l57.47,-57.47C384.98,186.94 395.97,212.27 399.06,240zM272,112.94c27.73,3.09 53.06,14.08 73.78,30.66l-57.47,57.47c-5.06,-2.98 -10.5,-5.28 -16.3,-6.8V112.94zM240,112.94v81.33c-5.81,1.5 -11.26,3.81 -16.3,6.8L166.22,143.6C186.94,127.02 212.27,116.03 240,112.94zM143.6,166.22l57.47,57.47c-2.98,5.06 -5.28,10.5 -6.8,16.3h-81.33C116.03,212.27 127.02,186.94 143.6,166.22zM112.94,272h81.33c1.5,5.81 3.81,11.26 6.8,16.3L143.6,345.78C127.02,325.06 116.03,299.73 112.94,272zM240,399.06c-27.73,-3.09 -53.06,-14.08 -73.78,-30.66l57.47,-57.47c5.06,2.98 10.5,5.28 16.3,6.8V399.06zM224,256c0,-17.65 14.35,-32 32,-32s32,14.35 32,32s-14.35,32 -32,32S224,273.65 224,256zM272,399.06v-81.33c5.81,-1.5 11.26,-3.81 16.3,-6.8l57.47,57.47C325.06,384.98 299.73,395.97 272,399.06zM368.4,345.78l-57.47,-57.47c2.98,-5.06 5.28,-10.5 6.8,-16.3h81.33C395.97,299.73 384.98,325.06 368.4,345.78z" />
+    </group>
 </vector>
