--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,14 @@
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimary</item>
+
+        <!-- SplashScreen -->
+        <item name="android:windowSplashScreenBackground" tools:targetApi="s">@color/black
+        </item>
+        <item name="android:windowSplashScreenAnimatedIcon" tools:targetApi="s">
+            @mipmap/ic_launcher_round
+        </item>
+        <item name="android:windowSplashScreenAnimationDuration" tools:targetApi="s">200</item>
     </style>
 
     <style name="Theme.ListCar" parent="Base.Theme.ListCar" />
