--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="colorSecondary">@color/PRIMARY_600</item>
         <item name="colorSecondaryVariant">@color/SECONDARY_700</item>
         <item name="colorOnSecondary">@color/white</item>
+        <item name="colorPrimaryDark">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimary</item>
 
